--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,19 +1,24 @@
-<h1>Questions</h1>
+<h1 class="mb-4">Questions</h1>
 
 <% @questions.each do |question| %>
-  <h2><%= question.title %></h2>
+  <article class="card">
+    <div class="card-body">
+      <h4><%= question.title %></h4>
 
-  <time datetime="<% question.formatted_created_at %>">
-    <%= question.formatted_created_at %>
-  </time>
+      <section class="card-text">
+        <time datetime="<%= question.formatted_created_at %>">
+          <small><%= question.formatted_created_at %></small>
+        </time>
 
-  <p>
-    <%= question.body %>
-    <br>
-    <%= link_to "Show", question_path(question) %>
-    <%= link_to "Edit", edit_question_path(question) %>
-    <%= button_to "Destroy", question_path(question), method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
-  </p>
+        <p class="my-2">
+          <%= question.body %>
+        </p>
+      </section>
+
+      <%= link_to "Show", question_path(question), class: "btn btn-primary" %>
+      <%= link_to "Edit", edit_question_path(question), class: "btn btn-secondary" %>
+      <%= button_to "Destroy", question_path(question), class: "btn btn-danger",
+        method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
+    </div>
+  </article>
 <% end %>
-
-<%= link_to "New", new_question_path %>
