--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -3,7 +3,8 @@
     <%= f.label :title, class: 'col-sm-2 col-form-label' %>
 
     <div class="col-sm-10">
-      <%= f.text_field :title, required: true, minlength: 2, placeholder: "Title", class: 'form-control' %>
+      <%= f.text_field :title, placeholder: "Title", class: 'form-control' %>
+      <%#= f.text_field :title, required: true, minlength: 2, placeholder: "Title", class: 'form-control' %>
     </div>
   </div>
 
@@ -11,9 +12,22 @@
     <%= f.label :body, class: 'col-sm-2 col-form-label' %>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, required: true, minlength: 2, class: 'form-control'%>
+      <%= f.text_area :body, class: 'form-control'%>
+      <%#= f.text_area :body, required: true, minlength: 2, class: 'form-control'%>
     </div>
   </div>
+
+  <% if @question.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@question.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+      <ul>
+        <% @question.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <%= f.submit "Submit question!", class: 'btn btn-primary'%>
 <% end %>
