--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,6 +1,10 @@
+<%= render "shared/errors", object: @question %>
+
 <%= form_with model: @question do |f| %>
   <div class="mb-3 row">
-    <%= f.label :title, class: 'col-sm-2 col-form-label' %>
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :title %>
+    </div>
 
     <div class="col-sm-10">
       <%= f.text_field :title, placeholder: "Title", class: 'form-control' %>
@@ -9,25 +13,15 @@
   </div>
 
   <div class="mb-3 row">
-    <%= f.label :body, class: 'col-sm-2 col-form-label' %>
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :body %>
+    </div>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control'%>
+      <%= f.text_area :body, placeholder: "Body", class: 'form-control'%>
       <%#= f.text_area :body, required: true, minlength: 2, class: 'form-control'%>
     </div>
   </div>
-
-  <% if @question.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@question.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-        <% @question.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <%= f.submit "Submit question!", class: 'btn btn-primary'%>
 <% end %>
