--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,11 @@
   </header>
 
   <main class="container mt-3">
-      <%= yield %>
-    </main>
+    <% flash.each do |k, v| %>
+      <%= tag.div v, class: "alert alert-#{k}", role: "alert" %>
+    <% end %>
+
+    <%= yield %>
+  </main>
   </body>
 </html>
