--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -12,3 +12,43 @@
 <%= link_to "Edit", edit_question_path(@question), class: "btn btn-secondary" %>
 <%= button_to "Destroy", question_path(@question), class: "btn btn-danger",
   method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
+
+<hr class="my-4">
+
+<h4>Write your answer</h4>
+
+<%= render "shared/errors", object: @answer %>
+
+<%= form_with model: [@question, @answer] do |f| %>
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :body %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_area :body, placeholder: "Body", class: 'form-control'%>
+    </div>
+  </div>
+
+  <%= f.submit "Submit answer!", class: 'btn btn-primary'%>
+<% end %>
+
+<h3 class="mt-5">Answers</h3>
+
+<% @answers.each do |answer| %>
+  <article class="mb-3">
+    <time datetime="<% answer.formatted_created_at %>">
+      <%= answer.formatted_created_at %>
+    </time>
+
+    <p>
+      <%= answer.body %>
+    </p>
+
+    <%= button_to "Delete", question_answer_path(@question, answer),
+      class: "btn btn-danger btn-sm",
+      method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
+
+    <hr class="my-3">
+  </article>
+<% end %>
