--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, "Question" %>
+<% currently_at "Question" %>
+
 <h2 class="mb-4">Edit question <%= @question.title %></h2>
 
 <%= render 'form' %>
