--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,7 @@
-<h2 class="mb-4"><%= @question.title %></h2>
+<% provide :page_title, "Question" %>
+<% currently_at "Question" %>
 
+<h2 class="mb-4"><%= @question.title %></h2>
 
 <time datetime="<% @question.formatted_created_at %>">
   <%= @question.formatted_created_at %>
@@ -36,23 +38,26 @@
 <h3 class="mt-5">Answers</h3>
 
 <% @answers.each do |answer| %>
-  <article class="mb-3">
-    <time datetime="<% answer.formatted_created_at %>">
-      <%= answer.formatted_created_at %>
-    </time>
+  <article class="mb-3 card">
+    <div class="card-body">
+      <section class="card-text">
+        <small>
+          <time datetime="<% answer.formatted_created_at %>">
+            <%= answer.formatted_created_at %>
+          </time>
+        </small>
 
-    <p>
-      <%= answer.body %>
-    </p>
+        <p>
+          <%= answer.body %>
+        </p>
+      </section>
 
     <%= link_to "Edit", edit_question_answer_path(@question, answer),
       class: "btn btn-secondary btn-sm" %>
-
     <%= button_to "Destroy", question_answer_path(@question, answer),
       class: "btn btn-danger btn-sm",
       method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
 
-
-    <hr class="my-3">
+    </div>
   </article>
 <% end %>
