--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,3 +1,6 @@
+<% provide :page_title, "Answer" %>
+<% currently_at "Answer" %>
+
 <h2 class="mb-4">Edit answer <%= @answer.body %></h2>
 
 <%= render 'form' %>
