--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,6 +5,8 @@
 
 <%= link_to "New question", new_question_path, class: "btn btn-primary btn-lg" %>
 
+<%= paginate @questions %>
+
 <% @questions.each do |question| %>
   <article class="card mt-3">
     <div class="card-body">
@@ -28,3 +30,5 @@
   </article>
 
 <% end %>
+
+<%= paginate @questions %>
