--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,4 +1,4 @@
-<article class="mb-3 card" id="answer-<%= answer.id %>">
+<%= tag.article class: 'mb-3 card', id: dom_id(answer) do %>
   <div class="card-body">
     <section class="card-text">
       <small>
@@ -17,4 +17,4 @@
       method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
 
   </div>
-</article>
+<% end %>
