--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.email_field :email, placeholder: "E-mail", class: 'form-control form-control-lg' %>
+      <%= f.email_field :email, placeholder: "e-mail", class: 'form-control form-control-lg' %>
     </div>
   </div>
 
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :name, placeholder: "Name", class: 'form-control form-control-lg' %>
+      <%= f.text_field :name, placeholder: "name", class: 'form-control form-control-lg' %>
     </div>
   </div>
 
