user name instead of "sign up" if user signed in

--- a/app/views/shared/_menu.erb
+++ b/app/views/shared/_menu.erb
@@ -11,8 +11,16 @@
       </ul>
 
       <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+        <% if user_signed_in? %>
+          <li>
+            <a class="nav-link px-2 text-white-50" href="#">
+               <%= current_user.name %>
+            </a>
+          </li>
+        <% else %>
         <li><%= nav_tab 'Sign up', new_user_path,
           class: 'nav-link px-2', current_page: current_page %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
