--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,7 @@
 
 <%= link_to "New question", new_question_path, class: "btn btn-primary btn-lg mb-3" %>
 
-<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<%= pagination @pagy %>
 
 <% @questions.each do |question| %>
   <article class="card my-3">
@@ -31,5 +31,4 @@
 
 <% end %>
 
-<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
-
+<%= pagination @pagy %>
