--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -21,11 +21,11 @@
 
 <%= render 'answers/form' %>
 
-<h3 class="mt-5">Answers</h3>
+<h3 class="mt-5 mb-3">Answers</h3>
 
-<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<%= pagination @pagy %>
 
 <%= render partial: 'answers/answer', collection: @answers,
   as: :answer, locals: {question: @question} %>
 
-<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<%= pagination @pagy %>
