--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% provide :page_title, "Registration" %>
-<% currently_at "Sign up" %>
+<% provide :page_title, "Sign Up" %>
+<% currently_at "Sign Up" %>
 
 <h2 class="mb-4">Registration</h2>
 
