--- a/app/views/shared/_menu.erb
+++ b/app/views/shared/_menu.erb
@@ -19,8 +19,15 @@
 
               <ul class="dropdown-menu">
                 <li>
+                  <%= link_to 'Edit profile', edit_user_path(current_user),
+                  class: 'dropdown-item' %>
+                </li>
+
+                <li><hr class="dropdown-divider"></li>
+
+                <li>
                   <%= link_to 'Log Out', session_path,
-                  class: 'dropdown-item', data: {method: :delete} %>
+                    class: 'dropdown-item', data: {method: :delete} %>
                 </li>
               </ul>
             </li>
