add locales for some words and use it

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
-<% currently_at "Home" %>
+<% currently_at t('menu.home') %>
 
-<h2>Welcome to AskIt</h2>
+<h2><%= t '.title' %></h2>
 
 &copy; @klims <%= Time.now.year %>
