--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :title, placeholder: "Title", class: 'form-control' %>
+      <%= f.text_field :title, placeholder: true, class: 'form-control' %>
       <%#= f.text_field :title, required: true, minlength: 2, placeholder: "Title", class: 'form-control' %>
     </div>
   </div>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, placeholder: "Body", class: 'form-control'%>
+      <%= f.text_area :body, placeholder: true, class: 'form-control'%>
       <%#= f.text_area :body, required: true, minlength: 2, class: 'form-control'%>
     </div>
   </div>
