--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,7 @@
-<% provide :page_title, "Questions" %>
-<% currently_at "Questions" %>
+<% provide :page_title, t('menu.questions') %>
+<% currently_at t('menu.questions') %>
 
-<h2 class="mb-4">Questions</h2>
+<h2 class="mb-4"><%= t('menu.questions') %></h2>
 
 <%= link_to "New question", new_question_path, class: "btn btn-primary btn-lg mb-3" %>
 
