--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,28 +7,6 @@
 
 <%= pagination @pagy %>
 
-<% @questions.each do |question| %>
-  <article class="card my-3">
-    <div class="card-body">
-      <h4><%= question.title %></h4>
-
-      <section class="card-text">
-        <time datetime="<%= question.formatted_created_at %>">
-          <small><%= question.formatted_created_at %></small>
-        </time>
-
-        <p class="my-2">
-          <%= truncate strip_tags(question.body), length: 150, omission: "... (continued)" %>
-        </p>
-      </section>
-
-      <%= link_to "Show", question_path(question), class: "btn btn-primary" %>
-      <%= link_to "Edit", edit_question_path(question), class: "btn btn-secondary" %>
-      <%= button_to "Destroy", question_path(question), class: "btn btn-danger",
-        method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
-    </div>
-  </article>
-
-<% end %>
+<%= render partial: 'question', collection: @questions %>
 
 <%= pagination @pagy %>
