--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,13 +11,20 @@
   <%= sanitize @question.body %>
 </div>
 
-<%= link_to "Edit", edit_question_path(@question), class: "btn btn-secondary" %>
-<%= button_to "Destroy", question_path(@question), class: "btn btn-danger",
-  method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
+<div class="mb-3">
+  <%= @question.user.gravatar %>
+  <%= @question.user.name_or_email %>
+</div>
 
-<hr class="my-4">
+<div class="border-top border-bottom py-3">
+  <div class="btn-group">
+    <%= link_to "Edit", edit_question_path(@question), class: "btn btn-secondary" %>
+    <%= link_to "Destroy", question_path(@question), class: "btn btn-danger",
+       data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+  </div>
+</div>
 
-<h4>Write your answer</h4>
+<h2 class="my-3">Write your answer</h2>
 
 <%= render 'answers/form' %>
 
