--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -19,10 +19,10 @@
           </div>
         </section>
 
-        <%= link_to "Edit", edit_question_answer_path(question, answer),
+        <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer),
           class: "btn btn-info btn-sm" %>
-        <%= link_to "Destroy", question_answer_path(question, answer),
-          class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+        <%= link_to t('global.button.delete'), question_answer_path(question, answer),
+          class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
       </div>
     </div>
   </div>
