--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -13,13 +13,13 @@
       </time>
 
       <p class="my-2">
-        <%= truncate strip_tags(question.body), length: 150, omission: "... (continued)" %>
+        <%= truncate strip_tags(question.body), length: 150, omission: t('global.text.omission') %>
       </p>
     </section>
 
-    <%= link_to "Show", question_path(question), class: "btn btn-primary" %>
-    <%= link_to "Edit", edit_question_path(question), class: "btn btn-secondary" %>
-    <%= button_to "Destroy", question_path(question), class: "btn btn-danger",
-      method: :delete, form: { data: { turbo_confirm: 'Are you sure?' } } %>
+    <%= link_to t('global.button.show'), question_path(question), class: "btn btn-primary" %>
+    <%= link_to t('global.button.edit'), edit_question_path(question), class: "btn btn-secondary" %>
+    <%= link_to t('global.button.delete'), question_path(question), class: "btn btn-danger",
+      data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
   </div>
 </article>
