--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,5 @@
-<% provide :page_title, "Question" %>
-<% currently_at "Question" %>
+<% provide :page_title, @question.title %>
+<% currently_at t('menu.questions') %>
 
 <h2 class="mb-4"><%= @question.title %></h2>
 
@@ -18,17 +18,17 @@
 
 <div class="border-top border-bottom py-3">
   <div class="btn-group">
-    <%= link_to "Edit", edit_question_path(@question), class: "btn btn-secondary" %>
-    <%= link_to "Destroy", question_path(@question), class: "btn btn-danger",
-       data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+    <%= link_to t('global.button.edit'), edit_question_path(@question), class: "btn btn-secondary" %>
+    <%= link_to t('global.button.delete'), question_path(@question), class: "btn btn-danger",
+       data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
   </div>
 </div>
 
-<h2 class="my-3">Write your answer</h2>
+<h2 class="my-3"><%= t('.write_answer') %></h2>
 
 <%= render 'answers/form' %>
 
-<h3 class="mt-5 mb-3">Answers</h3>
+<h3 class="mt-5 mb-3"><%= t('.answers') %></h3>
 
 <%= pagination @pagy %>
 
