replace forms register and save locals to users

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -53,6 +53,6 @@
     </div>
   <% end %>
 
-  <%= f.submit (@user.new_record? ? t('global.forms.register') : t('global.forms.save')),
+  <%= f.submit (@user.new_record? ? t('users.global.forms.register') : t('users.global.forms.save')),
     class: 'btn btn-primary btn-lg' %>
 <% end %>
