--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, placeholder: true, required: true, class: 'form-control' %>
+      <%= f.text_area :body, placeholder: true, required: true, minlength: 2, class: 'form-control' %>
     </div>
   </div>
 
