--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -13,6 +13,10 @@
       </time>
 
       <p class="my-2">
+        <%= render partial: 'tags/tag', collection: question.tags %>
+      </p>
+
+      <p class="my-2">
         <%= truncate strip_tags(question.body), length: 150, omission: t('global.text.omission') %>
       </p>
     </section>
