--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>">
   <head>
     <title><%= full_title(yield(:page_title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +11,7 @@
     <%= javascript_import_module_tag("utils") %>
   </head>
 
-  <body>
+  <body data-lang="<%= I18n.locale %>">
     <%= yield :main_menu %>
 
     <main class="container mt-3">
