--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,5 +21,18 @@
     </div>
   </div>
 
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :tag_ids %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.collection_select :tag_ids, tags, :id, :title, {},
+        { data: { placeholder: t('activerecord.attributes.question.tag_ids') },
+          multiple: true,
+          class: 'js-multiple-select w-100' } %>
+    </div>
+  </div>
+
   <%= f.submit t('global.button.submit'), class: 'btn btn-primary'%>
 <% end %>
