--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -27,10 +27,10 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.collection_select :tag_ids, tags, :id, :title, {},
-        { data: { placeholder: t('activerecord.attributes.question.tag_ids') },
-          multiple: true,
-          class: 'js-multiple-select w-100' } %>
+      <%= f.collection_select :tag_ids, question.tags, :id, :title, {},
+        { multiple: true,
+          class: 'js-multiple-select js-ajax-select w-100',
+          data: {'ajax-url': '/api/tags', placeholder: t('.enter_tag') } } %>
     </div>
   </div>
 
