use tom-select instead of select2

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -12,7 +12,7 @@
         { selected: params[:tag_ids] },
         { multiple: true,
           required: true,
-          class: 'js-multiple-select js-ajax-select w-100',
+          class: 'js-multiple-select js-ajax-select',
           data: {'ajax-url': '/api/tags', placeholder: t('.search_by_tags_form.enter_tag')} } %>
     </div>
 
