--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -29,7 +29,7 @@
     <div class="col-sm-10">
       <%= f.collection_select :tag_ids, question.tags, :id, :title, {},
         { multiple: true,
-          class: 'js-multiple-select js-ajax-select w-100',
+          class: 'js-multiple-select js-ajax-select',
           data: {'ajax-url': '/api/tags', placeholder: t('.enter_tag') } } %>
     </div>
   </div>
