--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -2,7 +2,7 @@
   <th scope="row"><%= user.id %></th>
   <td><%= user.name %></td>
   <td><%= user.email %></td>
-  <td><%= user.role %></td>
+  <td><%= t(user.role, scope: 'global.user.roles') %></td>
   <td><%= user.created_at %></td>
   <td>
     <%= link_to t('global.button.edit'), edit_admin_user_path(user), class: 'btn btn-secondary' %>
