--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,8 +13,10 @@
               <%= sanitize comment.body %>
             </p>
 
-            <%= link_to t('global.button.delete'), polymorphic_path([comment.commentable, comment]),
-              class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+            <% if policy(comment).destroy? %>
+              <%= link_to t('global.button.delete'), polymorphic_path([comment.commentable, comment]),
+                class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+            <% end %>
           </div>
         </section>
       </div>
