--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -21,9 +21,17 @@
       </p>
     </section>
 
-    <%= link_to t('global.button.show'), question_path(question), class: "btn btn-primary" %>
-    <%= link_to t('global.button.edit'), edit_question_path(question), class: "btn btn-secondary" %>
-    <%= link_to t('global.button.delete'), question_path(question), class: "btn btn-danger",
-      data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+    <% if policy(question).show? %>
+      <%= link_to t('global.button.show'), question_path(question), class: "btn btn-primary" %>
+    <% end %>
+
+    <% if policy(question).edit? %>
+      <%= link_to t('global.button.edit'), edit_question_path(question), class: "btn btn-secondary" %>
+    <% end %>
+
+    <% if policy(question).destroy? %>
+      <%= link_to t('global.button.delete'), question_path(question), class: "btn btn-danger",
+        data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+    <% end %>
   </div>
 </article>
