--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -20,7 +20,9 @@
   <% end %>
 </section>
 
-<%= link_to t('.new'), new_question_path, class: "btn btn-primary btn-lg mb-3" %>
+<% if policy(:question).new? %>
+    <%= link_to t('.new'), new_question_path, class: "btn btn-primary btn-lg mb-3" %>
+<% end %>
 
 <%= pagination @pagy %>
 
