--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -21,9 +21,14 @@
 
 <div class="border-top border-bottom py-3 mt-3">
   <div class="btn-group">
-    <%= link_to t('global.button.edit'), edit_question_path(@question), class: "btn btn-secondary" %>
-    <%= link_to t('global.button.delete'), question_path(@question), class: "btn btn-danger",
+    <% if policy(@question).edit? %>
+      <%= link_to t('global.button.edit'), edit_question_path(@question), class: "btn btn-secondary" %>
+    <% end %>
+
+    <% if policy(@question).destroy? %>
+      <%= link_to t('global.button.delete'), question_path(@question), class: "btn btn-danger",
        data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+    <% end %>
   </div>
 </div>
 
