--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -5,8 +5,10 @@
   <td><%= t(user.role, scope: 'global.user.roles') %></td>
   <td><%= user.created_at %></td>
   <td>
-    <%= link_to t('global.button.edit'), edit_admin_user_path(user), class: 'btn btn-secondary' %>
-    <%= link_to t('global.button.delete'), admin_user_path(user), class: 'btn btn-danger',
-      data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+    <div class="btn-group">
+      <%= link_to t('global.button.edit'), edit_admin_user_path(user), class: 'btn btn-secondary' %>
+      <%= link_to t('global.button.delete'), admin_user_path(user), class: 'btn btn-danger',
+        data: { turbo_method: :delete, turbo_confirm: t('global.dialog.you_sure') } %>
+    </div>
   </td>
 </tr>
