--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,10 +2,6 @@
 @import 'bootstrap-icons/font/bootstrap-icons';
 @import 'tom-select/dist/scss/tom-select.bootstrap5';
 
-/*
- *= require reset
- *
- *= require errors
- *
- *= require flags
- */
+@import 'reset';
+@import 'errors';
+@import 'flags';
