--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,7 +1,6 @@
+@import 'custom';
+
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
-@import 'tom-select/dist/scss/tom-select.bootstrap5';
 
-@import 'reset';
-@import 'errors';
-@import 'flags';
+@import 'tom-select/dist/scss/tom-select.bootstrap5';
