--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,38 +1,40 @@
-<%= render "shared/errors", object: question %>
+<%= turbo_frame_tag question do %>
+  <%= form_with model: question do |f| %>
+    <%= render "shared/errors", object: question %>
 
-<%= form_with model: question do |f| %>
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :title %>
+    <div class="mb-3 row">
+      <div class="col-sm-2 col-form-label">
+        <%= f.label :title %>
+      </div>
+
+      <div class="col-sm-10">
+        <%= f.text_field :title, placeholder: true, minlength: 2, class: 'form-control' %>
+      </div>
     </div>
 
-    <div class="col-sm-10">
-      <%= f.text_field :title, placeholder: true, required: true, minlength: 2, class: 'form-control' %>
-    </div>
-  </div>
+    <div class="mb-3 row">
+      <div class="col-sm-2 col-form-label">
+        <%= f.label :body %>
+      </div>
 
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :body %>
-    </div>
-
-    <div class="col-sm-10">
-      <%= f.text_area :body, placeholder: true, required: true, minlength: 2, class: 'form-control' %>
-    </div>
-  </div>
-
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :tag_ids %>
+      <div class="col-sm-10">
+        <%= f.text_area :body, placeholder: true, required: true, minlength: 2, class: 'form-control' %>
+      </div>
     </div>
 
-    <div class="col-sm-10">
-      <%= f.collection_select :tag_ids, question.tags, :id, :title, {},
-        { multiple: true,
-          class: 'js-multiple-select js-ajax-select',
-          data: {'ajax-url': '/api/tags', placeholder: t('.enter_tag') } } %>
-    </div>
-  </div>
+    <div class="mb-3 row">
+      <div class="col-sm-2 col-form-label">
+        <%= f.label :tag_ids %>
+      </div>
 
-  <%= f.submit t('global.button.submit'), class: 'btn btn-primary'%>
+      <div class="col-sm-10">
+        <%= f.collection_select :tag_ids, question.tags, :id, :title, {},
+          { multiple: true,
+            class: 'js-multiple-select js-ajax-select',
+            data: {'ajax-url': '/api/tags', placeholder: t('.enter_tag') } } %>
+      </div>
+    </div>
+
+    <%= f.submit t('global.button.submit'), class: 'btn btn-primary'%>
+  <% end %>
 <% end %>
