--- a/app/views/comments/_commentable.html.erb
+++ b/app/views/comments/_commentable.html.erb
@@ -27,5 +27,5 @@
     <% end %>
   <% end %>
 
-  <%= render partial: 'comments/comment', collection: commentable.comments.decorate %>
+  <%= render partial: 'comments/comment', collection: commentable.comments.includes([:user, :commentable]).decorate %>
 <% end %>
